[gd_scene load_steps=9 format=3 uid="uid://dj0g4q462iuf4"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_4q6j2"]
[ext_resource type="PackedScene" uid="uid://csn8w31j400o5" path="res://scenes/bullet.tscn" id="2_o3oqa"]
[ext_resource type="StandardMaterial3D" uid="uid://dps71488c2q7x" path="res://assets/materials/player_weapon_material.tres" id="3_7q8o7"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_k4r87"]
radius = 0.5
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b4n0q"]
radius = 0.5
height = 1.8

[sub_resource type="BoxMesh" id="BoxMesh_k9q37"]
material = ExtResource("3_7q8o7")
size = Vector3(0.2, 0.2, 0.8)

[sub_resource type="CylinderMesh" id="CylinderMesh_m2h0f"]
material = ExtResource("3_7q8o7")
top_radius = 0.1
bottom_radius = 0.1
height = 0.3

[sub_resource type="Animation" id="Animation_7v0sa"]
resource_name = "shoot_recoil"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/WeaponMuzzle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.5, -0.4, -0.6), Vector3(0.5, -0.4, -0.8), Vector3(0.5, -0.4, -0.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/WeaponMuzzle:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0872665, 0, 0), Vector3(0, 0, 0)]
}

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 1
collision_mask = 6
script = ExtResource("1_4q6j2")
bullet_scene = ExtResource("2_o3oqa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_k4r87")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_b4n0q")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
fov = 80.0

[node name="WeaponMuzzle" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.4, -0.6)

[node name="RayCast3D" type="RayCast3D" parent="Head/WeaponMuzzle"]
target_position = Vector3(0, 0, -20)
collision_mask = 2
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="WeaponVisual" type="MeshInstance3D" parent="Head/WeaponMuzzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.4)
mesh = SubResource("BoxMesh_k9q37")

[node name="WeaponSight" type="MeshInstance3D" parent="Head/WeaponMuzzle/WeaponVisual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, -0.15)
mesh = SubResource("CylinderMesh_m2h0f")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("Animation_7v0sa")
}

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]

